commitando tela do formulário

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div id="buttons">
-            <button id="inscrição">inscrição</button>
+            <button id="inscrição">login</button>
             <button>plataforma</button>
             <button>metodologia</button>
             <button>professores</button>
